--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,8 +2,7 @@ name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -12,73 +11,89 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: pip install -r requirements/requirements.txt
-      - name: Train and save pipeline
+
+      - name: Train model pipeline
         run: python titanic_model/train_pipeline.py
-      - uses: actions/upload-artifact@v2
+
+      - name: Upload trained pipeline
+        uses: actions/upload-artifact@v3
         with:
-          name: my-trained-pipeline
+          name: trained-pipeline
           path: titanic_model/trained_models/*.pkl
+          # retention-days is optional; adjust or remove if you like
           retention-days: 1
 
   build:
-    needs: train   # Removed test from needs
+    needs: train
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
-      - uses: actions/download-artifact@v2
+
+      - name: Download trained pipeline artifact
+        uses: actions/download-artifact@v3
         with:
-          name: my-trained-pipeline
+          name: trained-pipeline
           path: titanic_model/trained_models
-      - name: Install dependencies
+
+      - name: Install build tooling
         run: pip install --upgrade build
-      - name: Build package
+
+      - name: Build Python package
         run: python -m build
-      - uses: actions/upload-artifact@v3
+
+      - name: Upload build package
+        uses: actions/upload-artifact@v3
         with:
-          name: my-build-package
+          name: build-package
           path: dist/*.whl
           retention-days: 1
 
   push-image:
-    needs: [train, build]   # Removed test from needs
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Repo Checkout
+      - name: Check out code
         uses: actions/checkout@v3
 
-      - uses: actions/download-artifact@v2
+      - name: Download build package artifact
+        uses: actions/download-artifact@v3
         with:
-          name: my-build-package
+          name: build-package
           path: titanic_model_api
 
-      - name: Login to Docker hub
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS_TOKEN }}
-        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER_NAME }}
+          password: ${{ secrets.DOCKER_PASS_TOKEN }}
 
-      - name: Build the Docker image for Fastapi app
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-        run: docker build . -f Dockerfile -t $DOCKER_USER/titanic-fastapi:latest
+      - name: Build Docker image
+        run: |
+          docker build . \
+            --file Dockerfile \
+            --tag ${{ secrets.DOCKER_USER_NAME }}/titanic-fastapi:latest
 
-      - name: Push the Docker Image
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-        run: docker push $DOCKER_USER/titanic-fastapi
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USER_NAME }}/titanic-fastapi:latest
 
-      - name: Logout to Docker hub
+      - name: Log out of Docker Hub
         run: docker logout
